samples/_failures_safe/1761164665_15e8cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71cb1515.c: In function ‘main’:
./samples/SAFE/__tmp_71cb1515.c:163:12: error: missing terminating " character
  163 |     printf("Compression and decompression successful
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_71cb1515.c:163:5: error: expected expression at end of input
  163 |     printf("Compression and decompression successful
      |     ^~~~~~
./samples/SAFE/__tmp_71cb1515.c:163:5: error: expected declaration or statement at end of input
